k8/fraud-analysis-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: fraud-analysis-service
  labels: 
    app: fraud-analysis-api
spec:
  type: ClusterIP
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8000
  selector:
    app: fraud-analysis-api
